# PRAI

./: .gitignore  README.md
PoC/: index.html  pc_script.js  pcpoc.html  script.js  style.css
backend/: Dockerfile  pyproject.toml
backend/app/: server.py
pcresponses/: BFinfosheet.md  BFpressrelease.md  BSinfosheet.md  BSpressrelease.md  LTinfosheet.md  LTpressrelease.md
